k8s/k8s_use/discovery/traefik_nginx_test/service.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-web
  namespace: test
  labels:
    app: nginx-web

spec:
  containers:
    - name: web
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: port0
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: test
spec:
  # ClusterIP | LoadBalancer |
  type: NodePort
  #  clusterIP: None
  selector:
    app: nginx-web
  ports:
    - name: http
      port: 80 # service port
      targetPort: 80 # 容器nginx 的port
      # nodePort: 30080 #暴露到node的port
