k8s/k8s_use/discovery/traefik_nginx_test/ingressroute_auth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute-auth
  namespace: test
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`web.foo.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: auth-middleware
      services:
        - name: svc-web
          port: 80
  tls:
    secretName: test-nginx-cert
---
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: test
spec:
  basicAuth:
    secret: authsecret

---
